src/test/ui/generator/resume-arg-late-bound.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/resume-arg-late-bound.rs:15:10
   |
LL | fn test(a: impl for<'a> Generator<&'a mut bool>) {}
   |                 ------------------------------- required by this bound in `test`
...
LL |     test(gen);
   |          ^^^
   |          |
   |          expected signature of `for<'a> fn(&'a mut bool) -> _`
   |          found signature of `fn(&mut bool) -> _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
